fix need of side wards scrollbar

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 	color: white;
 	padding: 0;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 .header {
@@ -37,6 +38,7 @@ body {
 
 .guild-text {
 	margin: 0;
+	overflow-x: hidden;
 	padding: 0;
 	font-size: 0.65em;
 	color: #c9a84c;
@@ -107,6 +109,9 @@ body {
 }
 
 #recipe-overview-container {
+	max-width: 100vw;
+	box-sizing: border-box;
+	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -119,6 +124,8 @@ body {
 }
 
 #mermaid-graph {
+	overflow: hidden;
+	box-sizing: border-box;
 	width: 100%;
 	display: flex;
 	justify-content: center;
